--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,14 @@ body {
     --radius: 0.5rem;
   }
 }
+
+/* To hide all scrollbars for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* To hide scrollbars for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
